tests/NormalTests/paczka1/fuzzy1/75803737.err
Error in line 1: 3nA S131 43,8
Error in line 2: 3nA S510 33,9
Error in line 5: S131 A446 65,1
Error in line 20: S131 S510 84,6
Error in line 22: 3nA S131 89,5
Error in line 35: 7QY8a9 S510 11,23
Error in line 15: 7QY8a9 S510 19,4
